--- a/Entrega 4 Grupal/JAPFLIX/css/style.css
+++ b/Entrega 4 Grupal/JAPFLIX/css/style.css
@@ -30,3 +30,11 @@ main {
 .offcanvas-top{
     height: fit-content;
 }
+
+#offcanvasTopLabel{
+    border: 0.05cm;
+    border-style: solid;
+    border-radius: 0.5cm;
+    margin: 0.2cm;
+    padding: 0.2cm;
+}
